# django-htmx

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mytodo/chatbot/: consumers.py  urls.py  views.py
mytodo/chatbot/service/: chatbot.py  ollama.py
mytodo/chatbot/templates/: add_message.html  chatbot.html  message.html
mytodo/coin/: urls.py  views.py
mytodo/coin/service/: markets.py  render.py
mytodo/coin/templates/: coin.html  market_data.html
mytodo/dashboard/: urls.py  views.py
mytodo/dashboard/service/: render.py
mytodo/dashboard/templates/: bio_section.html  dashboard.html  edit_bio.html  edit_name.html  edit_phone.html  name_display.html  phone_display.html
mytodo/shared/: asgi.py  reponse.py  settings.py  singleton.py  urls.py  views.py  wsgi.py
mytodo/shared/templates/shared/: header.html  index.html  logout.html  message_modal.html  mobile_menu.html  task_item.html
mytodo/static/: manifest.json  sw.js
mytodo/tasks/: consumers.py  urls.py  views.py
mytodo/tasks/migrations/: 0001_initial.py
mytodo/tasks/service/: render.py
mytodo/tasks/templates/tasks/: index.html
mytodo/user/: models.py  urls.py  views.py
mytodo/user/migrations/: 0001_initial.py  0002_serviceuser_provider.py  0003_alter_serviceuser_managers_serviceuser_date_joined_and_more.py
mytodo/user/service/: auth.py  render.py
mytodo/user/templates/: pp.html  signin.html  tos.html
