[tool.poetry]
name = "mytodo"
version = "0.1.0"
description = ""
authors = ["secrett2633 <secrett2633@kakao.com>"]

[tool.poetry.dependencies]
python = "3.11.11"
channels = "4.2.0"
daphne = "4.1.2"
django = "5.1.7"
requests = "2.32.3"
dotenv = "0.9.9"
ollama = "0.4.7"
django-ninja = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
